[project]
authors = [
    {name = "Dani Hodovic", email = "dani.hodovic@gmail.com"},
]
maintainers = [
    {name = "Nick Joyce", email = "nick@stratuscode.com"},
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "celery<6.0,>=5.3",
    "click<9.0,>=8.1",
    "configur8<3.0,>=2.0",
    "Flask<3.0,>=2.3",
    "loguru<1.0,>=0.7",
    "pretty-errors<2.0,>=1.2",
    "prometheus-client<1.0,>=0.17",
    "pyyaml<7.0,>=6.0",
    "redis<5.0,>=4.6",
    "waitress<3.0,>=2.1",
]
name = "celery-exporter"
version = "0.9.1"
description = ""

[project.scripts]
celery-exporter = "celery_exporter.cli:via_config_file"

[tool.pdm.dev-dependencies]
dev = [
  "black",
  "celery-types",
  "isort",
  "jedi",
  "mypy",
  "pre-commit",
  "ptpython",
  "pudb",
  "pylint",
  "pytest",
  "pytest-celery",
  "pytest-cov",
  "pytest-mock",
  "requests",
  "types-requests",
  "types-waitress",
]

[build-system]
requires = ["pdm-backend", "pybind11"]
build-backend = "pdm.backend"

[tool.black]
skip_numeric_underscore_normalization = true
exclude = ".*(venv|virtualenv|.poetry|migrations|node_modules)"

[tool.isort]
profile = "black"
multi_line_output = 3
skip = '.virtualenv,.venv,.poetry,.poetry-cache'

